fix: header right side overflow

--- a/oauth_static/base.css
+++ b/oauth_static/base.css
@@ -4,7 +4,7 @@ body {
 }
 
 header {
-	width: 100vw;
+	width: 100%;
 	background-color: #6ae;
 	box-shadow: 0 0 0.5em;
 }
